<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/ivDoodleWorld"
            android:layout_width="362dp"
            android:layout_height="255dp"
            app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/create_room" />

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCreateRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_room"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivDoodleWorld" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRoomName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/room_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRoomName"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:inputType="text"
                android:maxLength="16" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRoomSize"
            style="@style/DropDownStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/room_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCreateRoom"
            app:layout_constraintStart_toStartOf="@+id/tilRoomName"
            app:layout_constraintTop_toBottomOf="@+id/tilRoomName">

        <AutoCompleteTextView
                android:id="@+id/tvMaxPersons"
                style="@style/TextInputStyle"
                android:layout_width="107dp"
                android:layout_height="66dp"
                android:inputType="none"
                android:labelFor="@id/tvMaxPersons"
                android:text="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateRoom"
            android:layout_width="159dp"
            android:layout_height="77dp"
            android:text="@string/create_room"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tilRoomName"
            app:layout_constraintTop_toTopOf="@+id/tilRoomSize"
            app:layout_constraintVertical_bias="0.0" />

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/createRoomProgressBar"
            android:layout_width="117dp"
            android:layout_height="92dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/tilRoomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading2" />

</androidx.constraintlayout.widget.ConstraintLayout>